--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,13 @@ environment:
 dependencies:
   font_awesome_flutter: ^10.2.1
   settings_ui: ^2.0.2
+  sqflite: ^2.0.0+4
+  shared_preferences: ^2.1.2
+  intl: ^0.20.2
+  path: ^1.8.0
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,6 +65,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
