--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   settings_ui: ^2.0.2
   sqflite: ^2.0.0+4
-  shared_preferences: ^2.1.2
+  shared_preferences: ^2.5.1
   intl: ^0.20.2
   path: ^1.8.0
   flutter:
@@ -43,6 +43,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
