--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,12 @@ environment:
 dependencies:
   font_awesome_flutter: ^10.2.1
   settings_ui: ^2.0.2
-  sqflite: ^2.0.0+4
   shared_preferences: ^2.5.1
+  provider: ^6.0.3
+  flutter_secure_storage: ^5.0.2
+  image_picker: ^0.8.7
+  url_launcher: ^6.1.5
+  cached_network_image: ^3.2.3
   intl: ^0.20.2
   path: ^1.8.0
   flutter:
@@ -44,6 +48,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   http: ^1.3.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +74,8 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
