--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: flutter_practice_profile_page
-description: A new Flutter project.
-
+description: A new Flutter project
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -37,7 +36,9 @@ dependencies:
   image_picker: ^0.8.7
   url_launcher: ^6.1.5
   cached_network_image: ^3.2.3
-  intl: ^0.20.2
+  flutter_localizations:
+    sdk: flutter
+  intl: any
   path: ^1.8.0
   flutter:
     sdk: flutter
